--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "http:/isGavri.github.io/isGavriPage",
+  "homepage": "http://isGavri.github.io/isGavriPage",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
